Fixed navbar links collapsing when resizing window

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,6 @@ body{
 
 .brand-logo{
     margin-left: 10px;
-    display: block;
 }
 
 .create{
